# Autopilot-ESP32-CAM

./: .gitignore  .mcp.json  CHANGELOG.md  CMakeLists.txt  README.md  README_CN.md  RELEASE_NOTES.md  partitions.csv  run-all-tests.sh  sdkconfig.defaults
.github/: copilot-instructions.md  esp-cam-dev.agent.md
.github/agents/: esp-cam-dev.agent.md
.github/skills/_common/: detect-python.sh
.github/skills/automated-testing/: SKILL.md  self-test.sh
.github/skills/board-pinout-reference/: SKILL.md  self-test.sh
.github/skills/cdp-web-inspector/: SKILL.md  self-test.sh
.github/skills/code-refactoring/: SKILL.md  self-test.sh
.github/skills/daily-iteration/: SKILL.md  self-test.sh
.github/skills/environment-setup/: SKILL.md  self-test.sh
.github/skills/esp32-build-flash/: SKILL.md  self-test.sh
.github/skills/esp32-serial-tools/: SKILL.md  self-test.sh
.github/skills/project-scaffolding/: SKILL.md  self-test.sh
.github/skills/tmux-multi-shell/: SKILL.md  self-test.sh
.github/skills/web-page-inspector/: SKILL.md  self-test.sh
.github/skills/wifi-credentials/: SKILL.md  self-test.sh
.github/workflows/: ci.yml
components/fps_counter/: CMakeLists.txt  fps_counter.c
components/fps_counter/include/: fps_counter.h
components/sd_card/: CMakeLists.txt  sd_card.c
components/sd_card/include/: sd_card.h
components/virtual_sensor/: CMakeLists.txt  virtual_sensor.c
components/virtual_sensor/include/: virtual_sensor.h
docs/: API.md  TARGET.md
docs/daily-logs/: TEMPLATE.md  day-000.md  day-001.md  day-002.md  day-003.md  day-004.md  day-005.md  day-006.md  day-007.md  day-008.md  day-009.md  day-010.md  day-011.md  day-012.md  day-013.md  day-014.md  day-015.md  day-016.md  day-017.md  day-018.md  day-019.md  day-020.md  day-021.md  day-022.md  day-023.md  day-024.md  day-025.md  day-026.md  day-027.md  day-028.md  day-029.md  day-030.md  day-031.md  day-032.md  day-033.md  day-034.md  day-035.md  day-036.md
main/: CMakeLists.txt  Kconfig.projbuild  app.js  camera_handlers.c  camera_handlers.h  camera_init.c  camera_init.h  http_helpers.c  http_helpers.h  http_server.c  http_server.h  idf_component.yml  index.html  led_controller.c  led_controller.h  main.c  ota_update.c  ota_update.h  path_utils.c  path_utils.h  rate_limiter.c  rate_limiter.h  sd_file_ops.c  sd_file_ops.h  sd_handlers.c  sd_handlers.h  stream_server.c  stream_server.h  stream_udp.html  stream_ws.html  system_info.c  system_info.h  wifi_manager.c  wifi_manager.h  ws_stream.c  ws_stream.h
skills/board-pinout/: SKILL.md  self-test.sh
skills/daily-iteration/: SKILL.md  self-test.sh
skills/hw-test-verify/: SKILL.md  self-test.sh
skills/tmux-session/: SKILL.md  self-test.sh
skills/wifi-credentials/: SKILL.md  self-test.sh
test/: CMakeLists.txt
test/integration/: test_browser.py
test/mocks/: esp_err.h  esp_log.h  esp_random.h  esp_timer.h  mock_esp.c  mock_esp.h
test/mocks/driver/: gpio.h
test/unit/: test_fps_counter.c  test_led_controller.c  test_path_utils.c  test_rate_limiter.c  test_virtual_sensor.c
tools/: browser_qa.py  browser_verify.py  heap_24h_log.txt  heap_monitor.py  multi_client_test.py  ota_e2e_test.py  ota_test.sh  provision-wifi.sh  quality_audit.py  regression_test.py  stability_test.sh  take_screenshots.py  wifi_reconnect_test.py
